@@ -5,6 +5,7 @@ Date: ???
     - Added support for Early Construction mod #254
     - Added missing prerequisites #295
     - Added support for Grappling Gun mod #308
+    - Added support for Jetpack mod #309
   Bugfixes:
     - Fixed Radar being unlocked by both Military and Radars 1 #296
     - Fixed Exoplanetary Studies Lab recipe not including previous lab tier #303
